# todo-list

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  PLAN-list-types.md  PLAN_CALENDAR.md  README.md  ROADMAP.md  STATUS-list-types.md  docker-compose.override.template.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
alembic/: env.py
alembic/versions/: 128c8dbaa896_add_pantry_items_table.py  12b0db9e64ae_add_pantry_match_history_table.py  1641c3cc0ad1_add_image_path_to_recipes.py  24a12a50937a_rename_accountability_partner_email_to_.py  36dfb2cbfd34_change_recipe_sources_to_jsonb.py  3cfc4495f153_add_preferred_store_to_pantry_items.py  5629dbc4b062_add_receipt_scans_table.py  6bdab1b936db_add_voice_debug_info_column.py  77a1e10b4e02_add_server_defaults_for_timestamps.py  845e34fbe44f_add_nutrition_fields_to_recipes.py  97809157912f_add_notification_system_tables.py  9a575656375c_add_last_cooked_at_to_recipes.py  a1b2c3d4e5f6_add_recipe_import_and_step_completions.py  a663a531e286_add_list_type_and_task_item_fields.py  af087f049b12_initial_tables.py  b38c0ebf1f16_add_label_color_to_recipes.py  bf47c0f97f64_add_voice_refinement_fields.py  d001ec64829d_add_recipe_management_tables.py  d1316c142a82_add_voice_input_and_pending_.py  d3956c59dd12_add_archived_at_to_lists.py  f1a2b3c4d5e6_add_family_tables.py
docs/: API_CLIENT_MIGRATION.md  multi-agent-isolation.md  pwa-fix-loose-ends.md  realtime-sync-plan.md
evals/: promptfooconfig.yaml
evals/reports/: 2025-12-31-llm-model-benchmark.md
evals/results/: eval-results.json
nginx/: todolist.lan
nginx-config/: todolist.lan
scripts/: agent-compose.sh  agent-env.sh  backup-db.sh  generate-readme-media.sh  run-pytest.sh  seed_demo_data.py  watch-api.sh
scripts/hooks/: post-commit
src/: __init__.py  celery_app.py  config.py  database.py  main.py
src/api/: __init__.py  auth.py  categories.py  debug.py  dependencies.py  families.py  items.py  lists.py  notifications.py  pantry.py  recipes.py  voice.py  webhooks.py  websocket.py
src/models/: __init__.py  category.py  enums.py  family.py  ingredient_store_default.py  item.py  item_history.py  list.py  mixins.py  pantry.py  pantry_match_history.py  pending_confirmation.py  push_subscription.py  receipt_scan.py  recipe.py  recipe_add_event.py  recipe_import.py  recipe_step_completion.py  reminder_response.py  reminder_state.py  user.py  user_notification_settings.py  voice_input.py
src/schemas/: __init__.py  auth.py  category.py  family.py  item.py  list.py  notification.py  pantry.py  receipt_scan.py  recipe.py  recipe_import.py  voice.py
src/services/: auth.py  categorization.py  heuristic_parser.py  llm.py  llm_prompts.py  notification_service.py  nutrition_service.py  pantry_service.py  realtime.py  receipt_service.py  recipe_service.py
src/tasks/: categorization.py  deduplication.py  nutrition.py  receipt_scan.py  recipe_import.py  reminders.py  voice_processing.py
tests/: __init__.py  conftest.py  test_api.py  test_categorization.py  test_family.py  test_pantry.py  test_realtime.py  test_recipe_import.py  test_recipes.py  test_voice.py
web/: eslint.config.mjs  jest.config.js  next.config.mjs  orval.config.ts  package-lock.json  package.json  playwright.config.ts
web/e2e/: demo-screenshots.spec.ts  example.spec.ts  readme-media.spec.ts  screenshot.spec.ts
web/public/: manifest.json  sw.js
web/public/voice/: index.html  manifest.json
web/scripts/: extract-icons.mjs  generate-icons.mjs
(+65 files in other folders)
