[project]
name = "todo-list"
version = "0.1.0"
description = "Self-hosted todo list app with voice input and LLM categorization"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.44",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.7.0",
    "pydantic[email]>=2.12.4",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "python-multipart>=0.0.18",
    "httpx>=0.28.1",
    "celery>=5.5.3",
    "redis>=7.1.0",
    "pyyaml>=6.0.2",
    "pywebpush>=2.0.0",
    "py-vapid>=1.9.1",
    "twilio>=9.0.0",
    "anthropic>=0.39.0",
    "pillow>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.28.1",
    "ruff>=0.8.3",
    "sqlalchemy-utils>=0.41.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "S",      # flake8-bandit (security)
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "PT",     # flake8-pytest-style
    "T20",    # flake8-print
]
ignore = [
    "E501",   # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # Use of assert (that's what tests do)
    "S106",   # Hardcoded password - test fixtures use fake passwords intentionally
]
"scripts/*" = [
    "T201",   # print() is needed for CLI feedback
    "S105",   # Hardcoded password - demo credentials are intentional
    "N806",   # Variable naming - SQLAlchemy Session convention
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:'crypt' is deprecated:DeprecationWarning",
]
